--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -86,8 +86,8 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					</ul>
 					<ul class="top-menu">
                         {% if user.is_authenticated %}
-                        <li>Welcome, {{ user.username }}</li>
-                        <li><a title="Logout" href="#">Logout</a></li>
+                        <li><a title="Welcome, {{ user.username }}" href="#">Welcome, {{ user.username }}</a></li>
+                        <li><a title="Logout" href="{% url 'logout' %}">Logout</a></li>
                         {% else %}
 						<li><a title="Login" href="{% url 'login' %}">Login</a></li>
 						<li><a title="Register" href="{% url 'register' %}">Register</a></li>
