--- a/store/templates/store/05_register.html
+++ b/store/templates/store/05_register.html
@@ -190,11 +190,11 @@ Purchase: http://themeforest.net/user/webstrot  -->
 									<li><a title="product" href="{% url 'product' %}">product</a></li>
 									<li><a title="Single product" href="04_single_product.html">single product</a></li>
 									<li><a title="Single product" href="04_single_product-2.html">single product 2</a></li>
-									<li><a title="Shopping cart" href="06_shopping_cart.html">shopping cart</a></li>
+									<li><a title="Shopping cart" href="{% url 'shopping_cart' %}">shopping cart</a></li>
 								</ul>
 							</li>
 							<li class="dropdown mega-dropdown">
-								<a title="categories" href="02_categories.html" class="dropdown-toggle" data-toggle="dropdown">categories
+								<a title="categories" href="{% url 'categories' %}" class="dropdown-toggle" data-toggle="dropdown">categories
 									<div role="tooltip" class="tooltip top">
 										<div class="tooltip-arrow"></div>
 										<div class="tooltip-inner">New</div>
@@ -276,17 +276,17 @@ Purchase: http://themeforest.net/user/webstrot  -->
 									</li>
 								</ul>
 							</li>
-							<li><a title="Look Book" href="look-book.html">Look Book</a></li>
+							<li><a title="Look Book" href="{% url 'look_book' %}">Look Book</a></li>
 							<li><a title="Blog" href="12_blog.html">Blog</a></li>
-							<li><a title="About Us" href="about.html">About Us</a></li>
+							<li><a title="About Us" href="{% url 'about' %}">About Us</a></li>
 							<li class="dropdown">
-								<a title="pages" href="about.html" class="dropdown-toggle" data-toggle="dropdown">pages</a>
+								<a title="pages" href="{% url 'about' %}" class="dropdown-toggle" data-toggle="dropdown">pages</a>
 								<ul class="dropdown-menu">
-									<li><a title="Shortcodes" href="shortcodes.html">Shortcodes</a></li>
-									<li><a title="404" href="404.html">404</a></li>
+									<li><a title="Shortcodes" href="{% url 'short_code' %}">Shortcodes</a></li>
+									<li><a title="404" href="{% url '404' %}">404</a></li>
 								</ul>
 							</li>
-							<li><a title="Contact us" href="14_contact.html">Contact us</a></li>
+							<li><a title="Contact us" href="{% url 'contact' %}">Contact us</a></li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</nav>
@@ -475,12 +475,12 @@ Purchase: http://themeforest.net/user/webstrot  -->
 							<span>from our store</span>
 						</h3>
 						<ul>
-							<li><a title="Shoes" href="02_categories.html">Shoes</a></li>
-							<li><a title="Perfumes" href="02_categories.html">Perfumes</a></li>
-							<li><a title="Bags" href="02_categories.html">Bags</a></li>
-							<li><a title="Make Up" href="02_categories.html">Make Up</a></li>
-							<li><a title="Jewelry" href="02_categories.html">Jewelry</a></li>
-							<li><a title="Clothing" href="02_categories.html">Clothing</a></li>
+							<li><a title="Shoes" href="{% url 'categories' %}">Shoes</a></li>
+							<li><a title="Perfumes" href="{% url 'categories' %}">Perfumes</a></li>
+							<li><a title="Bags" href="{% url 'categories' %}">Bags</a></li>
+							<li><a title="Make Up" href="{% url 'categories' %}">Make Up</a></li>
+							<li><a title="Jewelry" href="{% url 'categories' %}">Jewelry</a></li>
+							<li><a title="Clothing" href="{% url 'categories' %}">Clothing</a></li>
 						</ul>
 					</aside>
 
@@ -522,7 +522,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 					</div>
 					<ul>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-1.jpg' %}" alt="facebook-photo"/></a></li>
-						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-2.jpg' %}" alt="facebook-photot"/></a></li>
+						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-2.jpg' %}" alt="facebook-photo"/></a></li>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-3.jpg' %}" alt="facebook-photo"/></a></li>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-4.jpg' %}" alt="facebook-photo"/></a></li>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-5.jpg' %}" alt="facebook-photo"/></a></li>
