--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -194,11 +194,11 @@ Purchase: https://themeforest.net/user/webstrot  -->
 									<li><a title="product" href="{% url 'product' %}">product</a></li>
 									<li><a title="Single product" href="04_single_product.html">single product</a></li>
 									<li><a title="Single product" href="04_single_product-2.html">single product 2</a></li>
-									<li><a title="Shopping cart" href="06_shopping_cart.html">shopping cart</a></li>
+									<li><a title="Shopping cart" href="{% url 'shopping_cart' %}">shopping cart</a></li>
 								</ul>
 							</li>
 							<li class="dropdown mega-dropdown">
-								<a title="categories" href="02_categories.html" class="dropdown-toggle" data-toggle="dropdown">categories
+								<a title="categories" href="{% url 'categories' %}" class="dropdown-toggle" data-toggle="dropdown">categories
 									<div role="tooltip" class="tooltip top">
 										<div class="tooltip-arrow"></div>
 										<div class="tooltip-inner">New</div>
@@ -280,17 +280,17 @@ Purchase: https://themeforest.net/user/webstrot  -->
 									</li>
 								</ul>
 							</li>
-							<li><a title="Look Book" href="look-book.html">Look Book</a></li>
+							<li><a title="Look Book" href="{% url 'look_book' %}">Look Book</a></li>
 							<li><a title="Blog" href="12_blog.html">Blog</a></li>
-							<li><a title="About Us" href="about.html">About Us</a></li>
+							<li><a title="About Us" href="{% url 'about' %}">About Us</a></li>
 							<li class="dropdown">
-								<a title="pages" href="about.html" class="dropdown-toggle" data-toggle="dropdown">pages</a>
+								<a title="pages" href="{% url 'about' %}" class="dropdown-toggle" data-toggle="dropdown">pages</a>
 								<ul class="dropdown-menu">
-									<li><a title="Shortcodes" href="shortcodes.html">Shortcodes</a></li>
-									<li><a title="404" href="404.html">404</a></li>
+									<li><a title="Shortcodes" href="{% url 'short_code' %}">Shortcodes</a></li>
+									<li><a title="404" href="{% url '404' %}">404</a></li>
 								</ul>
 							</li>
-							<li><a title="Contact us" href="14_contact.html">Contact us</a></li>
+							<li><a title="Contact us" href="{% url 'contact' %}">Contact us</a></li>
 						</ul>
 					</div><!--/.nav-collapse -->
 				</nav>
@@ -379,7 +379,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					<div class="item">
 						<div class="category-box">
 							<span class="sale">+786</span>
-							<a title="Women’s Wear" href="./02_categories.html">
+							<a title="Women’s Wear" href="./{% url 'categories' %}">
 								<img src="{% static 'assets/../../static/assets/img/category/cat-img-1.jpg' %}" alt="cat-img" />
 								<span>Women’s Wear</span>
 								<div class="cat-hover"></div>
@@ -388,7 +388,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					</div>
 					<div class="item">
 						<div class="category-box">
-							<a title="Accessories" href="./02_categories.html">
+							<a title="Accessories" href="./{% url 'categories' %}">
 								<img src="{% static 'assets/../../static/assets/img/category/cat-img-2.jpg' %}" alt="cat-img"/>
 								<span>Accessories </span>
 								<div class="cat-hover"></div>
@@ -398,7 +398,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					<div class="item">
 						<div class="category-box">
 							<span class="new">New</span>
-							<a title="Kids Wear" href="./02_categories.html">
+							<a title="Kids Wear" href="./{% url 'categories' %}">
 								<img src="{% static 'assets/../../static/assets/img/category/cat-img-3.jpg' %}" alt="cat-img"/>
 								<span>Kids Wear</span>
 								<div class="cat-hover"></div>
@@ -407,7 +407,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					</div>
 					<div class="item">
 						<div class="category-box">
-							<a title="Women Accessories" href="./02_categories.html">
+							<a title="Women Accessories" href="./{% url 'categories' %}">
 								<img src="{% static 'assets/../../static/assets/img/category/cat-img-4.jpg' %}" alt="cat-img"/>
 								<span>Women Accessories</span>
 								<div class="cat-hover"></div>
@@ -417,7 +417,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					<div class="item">
 						<div class="category-box">
 							<span class="new">New</span>
-							<a title="Kids Wear" href="./02_categories.html">
+							<a title="Kids Wear" href="./{% url 'categories' %}">
 								<img src="{% static 'assets/../../static/assets/img/category/cat-img-5.jpg' %}" alt="cat-img"/>
 								<span>Kids Wear</span>
 								<div class="cat-hover"></div>
@@ -426,7 +426,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					</div>
 					<div class="item">
 						<div class="category-box">
-							<a title="Women Accessories" href="./02_categories.html">
+							<a title="Women Accessories" href="./{% url 'categories' %}">
 								<img src="{% static 'assets/../../static/assets/img/category/cat-img-6.jpg' %}" alt="cat-img"/>
 								<span>Women Accessories</span>
 								<div class="cat-hover"></div>
@@ -953,12 +953,12 @@ Purchase: https://themeforest.net/user/webstrot  -->
 							<span>from our store</span>
 						</h3>
 						<ul>
-							<li><a title="Shoes" href="02_categories.html">Shoes</a></li>
-							<li><a title="Perfumes" href="02_categories.html">Perfumes</a></li>
-							<li><a title="Bags" href="02_categories.html">Bags</a></li>
-							<li><a title="Make Up" href="02_categories.html">Make Up</a></li>
-							<li><a title="Jewelry" href="02_categories.html">Jewelry</a></li>
-							<li><a title="Clothing" href="02_categories.html">Clothing</a></li>
+							<li><a title="Shoes" href="{% url 'categories' %}">Shoes</a></li>
+							<li><a title="Perfumes" href="{% url 'categories' %}">Perfumes</a></li>
+							<li><a title="Bags" href="{% url 'categories' %}">Bags</a></li>
+							<li><a title="Make Up" href="{% url 'categories' %}">Make Up</a></li>
+							<li><a title="Jewelry" href="{% url 'categories' %}">Jewelry</a></li>
+							<li><a title="Clothing" href="{% url 'categories' %}">Clothing</a></li>
 						</ul>
 					</aside>
 
@@ -1000,7 +1000,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					</div>
 					<ul>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-1.jpg' %}" alt="facebook-photo"/></a></li>
-						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-2.jpg' %}" alt="facebook-photot"/></a></li>
+						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-2.jpg' %}" alt="facebook-photo"/></a></li>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-3.jpg' %}" alt="facebook-photo"/></a></li>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-4.jpg' %}" alt="facebook-photo"/></a></li>
 						<li><a  title="Facebook photo" href="#"><img src="{% static 'assets/../../static/assets/img/footer/fb-5.jpg' %}" alt="facebook-photo"/></a></li>
