--- a/store/templates/store/04_single_product-2.html
+++ b/store/templates/store/04_single_product-2.html
@@ -189,8 +189,8 @@ Purchase: http://themeforest.net/user/webstrot  -->
 								<a title="Shop" href="#" class="dropdown-toggle" data-toggle="dropdown">Shop</a>
 								<ul class="dropdown-menu">
 									<li><a title="product" href="{% url 'product' %}">product</a></li>
-									<li><a title="Single product" href="04_single_product.html">single product</a></li>
-									<li><a title="Single product" href="04_single_product-2.html">single product 2</a></li>
+									<li><a title="Single product" href="{% url 'single_product_1' %}">single product</a></li>
+									<li><a title="Single product" href="{% url 'single_product_2' %}">single product 2</a></li>
 									<li><a title="Shopping cart" href="{% url 'shopping_cart' %}">shopping cart</a></li>
 								</ul>
 							</li>							
@@ -860,7 +860,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 	<script src="../../static/assets/libraries/flexslider/jquery.flexslider-min.js"></script> <!-- flexslider   -->
 	<script src="../../static/assets/libraries/jquery.magnific-popup.min.js"></script> <!-- Light Box -->
 	<!-- Customized Scripts -->
-	<script src="js/functions.js"></script>
+	<script src="../../static/assets/js/functions.js"></script>
 	
 </body>
 </html>
