--- a/store/templates/store/07_login_register.html
+++ b/store/templates/store/07_login_register.html
@@ -188,8 +188,8 @@ Purchase: https://themeforest.net/user/webstrot  -->
 								<a title="Shop" href="#" class="dropdown-toggle" data-toggle="dropdown">Shop</a>
 								<ul class="dropdown-menu">
 									<li><a title="product" href="{% url 'product' %}">product</a></li>
-									<li><a title="Single product" href="04_single_product.html">single product</a></li>
-									<li><a title="Single product" href="04_single_product-2.html">single product 2</a></li>
+									<li><a title="Single product" href="{% url 'single_product_1' %}">single product</a></li>
+									<li><a title="Single product" href="{% url 'single_product_2' %}">single product 2</a></li>
 									<li><a title="Shopping cart" href="{% url 'shopping_cart' %}">shopping cart</a></li>
 								</ul>
 							</li>
