--- a/store/templates/store/04_single_product-2.html
+++ b/store/templates/store/04_single_product-2.html
@@ -506,7 +506,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 											</tbody>
 										</table>
 										<ul>
-											<li><a title="But Now" href="#">But Now</a></li>
+											<li><a title="Buy Now" href="#">Buy Now</a></li>
 											<li><a title="Favorites" href="#">favorites</a></li>
 										</ul>
 									</div>
