--- a/store/templates/store/12_blog.html
+++ b/store/templates/store/12_blog.html
@@ -276,7 +276,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 								</ul>
 							</li>
 							<li><a title="Look Book" href="{% url 'look_book' %}">Look Book</a></li>
-							<li><a title="Blog" href="12_blog.html">Blog</a></li>								
+							<li><a title="Blog" href="{% url 'blog' %}">Blog</a></li>
 							<li><a title="About Us" href="{% url 'about' %}">About Us</a></li>
 							<li class="dropdown">
 								<a title="pages" href="{% url 'about' %}" class="dropdown-toggle" data-toggle="dropdown">pages</a>
@@ -468,7 +468,8 @@ Purchase: http://themeforest.net/user/webstrot  -->
 							
 						<div class="col-md-10 col-sm-10">
 							<div class="entry-cover">						
-								<iframe src="http://player.vimeo.com/video/28425601?title=0&amp;byline=0&amp;portrait=0"></iframe>
+{#								<iframe src="http://player.vimeo.com/video/28425601?title=0&amp;byline=0&amp;portrait=0"></iframe>#}
+								<iframe src="https://player.vimeo.com/video/119429788?title=0&amp;byline=0&amp;portrait=0"></iframe>
 							</div>
 							<header class="entry-header">
 								<h2 class="entry-title"><a href="{% url 'single_blog_post' %}">Blog Post  (Video)
@@ -529,11 +530,12 @@ Purchase: http://themeforest.net/user/webstrot  -->
 							
 						<div class="col-md-10 col-sm-10">
 							<div class="entry-cover">						
-								<iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/149578188&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_artwork=true"></iframe>
+{#								<iframe src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/149578188&amp;color=ff5500&amp;auto_play=false&amp;hide_related=false&amp;show_artwork=true"></iframe>#}
+                                <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/355438928&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/tr-n-minh-h-ng" title="Nana.2903" target="_blank" style="color: #cccccc; text-decoration: none;">Nana.2903</a> · <a href="https://soundcloud.com/tr-n-minh-h-ng/mat-troi-cua-em" title="Mặt Trời Của Em - Phương Ly ft Justatee" target="_blank" style="color: #cccccc; text-decoration: none;">Mặt Trời Của Em - Phương Ly ft Justatee</a></div>
 							</div>
 							<header class="entry-header">
 								<h2 class="entry-title"><a href="{% url 'single_blog_post' %}">Blog Post  (Audio)
-								<span>Aliquam finibus sed neque et fringilla Interdum et malesuada.</span></a></h2>
+								<span>Mặt trời của em - Phương Ly.</span></a></h2>
 							</header>
 							<footer class="entry-footer">
 								<span class="posted-on">
@@ -1110,7 +1112,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 	<script src="../../static/assets/libraries/flexslider/jquery.flexslider-min.js"></script> <!-- flexslider   -->
 	<script src="../../static/assets/libraries/jquery.magnific-popup.min.js"></script> <!-- Light Box -->
 	<!-- Customized Scripts -->
-	<script src="js/functions.js"></script>
+	<script src="../../static/assets/js/functions.js"></script>
 	
 </body>
 </html>
