--- a/store/templates/store/about.html
+++ b/store/templates/store/about.html
@@ -275,7 +275,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 								</ul>
 							</li>
 							<li><a title="Look Book" href="{% url 'look_book' %}">Look Book</a></li>
-							<li><a title="Blog" href="12_blog.html">Blog</a></li>								
+							<li><a title="Blog" href="{% url 'blog' %}">Blog</a></li>
 							<li class="active"><a title="About Us" href="{% url 'about' %}">About Us</a></li>
 							<li class="dropdown">
 								<a title="pages" href="{% url 'about' %}" class="dropdown-toggle" data-toggle="dropdown">pages</a>
