--- a/store/static/assets/css/style.css
+++ b/store/static/assets/css/style.css
@@ -2,7 +2,7 @@
 **********************************************************************************************************
     Copyright (c) 2015
 **********************************************************************************************************
-	Project:		-- Luxury Shop Ecommerce HTML Template
+	Project:		-- Luxury Shop
 	Version:	    -- 1.0.0
 	Create Date:	-- 10/May/2015
 	Last change:	-- 10/May/2015
