--- a/store/templates/store/11_finish.html
+++ b/store/templates/store/11_finish.html
@@ -4,7 +4,7 @@
     Copyright (c) 2015 Webstrot Technology 
 ********************************************************************************************************** -->
 <!-- 
-Template Name: Luxury Shop Ecommerce HTML Template
+Template Name: Luxury Shop
 Version: 1.0.0
 Author: webstrot
 Website: http://webstrot.com/
@@ -21,7 +21,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">	
-	<title>Luxury Shop Ecommerce HTML Template</title>
+	<title>Luxury Shop</title>
 		
 	<link rel="shortcut icon" href="../../static/assets/../../static/assets/img/favicon.png">
     <link href="../../static/assets/../../static/assets/libraries/bootstrap/bootstrap.min.css" rel="stylesheet"/>
@@ -43,9 +43,9 @@ Purchase: http://themeforest.net/user/webstrot  -->
     <script src="../../static/assets/../../static/assets/js/html5/respond.min.js"></script>
     <![endif]-->
 
-	<link href='http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>	
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,400italic,300italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>	
-	<link href='http://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>	
+	<link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,400italic,300italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     
 </head>
 <body data-offset="200" data-spy="scroll" data-target=".primary-navigation">
