--- a/store/templates/store/index.html
+++ b/store/templates/store/index.html
@@ -7,7 +7,7 @@
     Copyright (c) 2015 Webstrot Technology
 ********************************************************************************************************** -->
 <!--
-Template Name: Luxury Shop Ecommerce HTML Template
+Template Name: Luxury Shop
 Version: 1.0.0
 Author: webstrot
 Website: https://webstrot.com/
@@ -24,7 +24,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-	<title>Luxury Shop Ecommerce HTML Template</title>
+	<title>Luxury Shop</title>
 
 	<link rel="shortcut icon" href="{% static 'assets/../../static/assets/img/favicon.png' %}">
     <link href="../../static/assets/../../static/assets/libraries/bootstrap/bootstrap.min.css" rel="stylesheet"/>
