--- a/store/templates/store/03_product.html
+++ b/store/templates/store/03_product.html
@@ -905,7 +905,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 					</ul>
 				</div>
 				<div class="col-md-6 col-sm-6 copy-rights">
-					<p> WebStrot&copy; 2015 Luxury Shop - HTML Template. </p>
+					<p> Luxury Shop - MinhTD </p>
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<a title="Payment getway" href="#"><img src="../../static/assets/img/footer/payment-getway-icon.png" alt="payment-getway-icon"></a>
@@ -918,7 +918,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 	
 	<!-- jQuery Include -->
 	<script src="../../static/assets/libraries/jquery.min.js"></script>
-	<script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false'></script>
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false'></script>
 	<script src="../../static/assets/libraries/gmap/jquery.gmap.min.js"></script> <!-- Light Box -->
 	<script src="../../static/assets/libraries/jquery.easing.min.js"></script><!-- Easing Animation Effect -->
 	<script src="../../static/assets/libraries/bootstrap/bootstrap.min.js"></script> <!-- Core Bootstrap v3.3.4 -->
