--- a/store/templates/store/12_blog.html
+++ b/store/templates/store/12_blog.html
@@ -1086,7 +1086,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 					</ul>
 				</div>
 				<div class="col-md-6 col-sm-6 copy-rights">
-					<p> WebStrot&copy; 2015 Luxury Shop - HTML Template. </p>
+					<p> Luxury Shop - MinhTD </p>
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<a title="Payment-getway" href="#"><img src="../../static/assets/img/footer/payment-getway-icon.png" alt="payment-getway-icon"></a>
