--- a/store/templates/store/04_single_product.html
+++ b/store/templates/store/04_single_product.html
@@ -426,7 +426,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star-o"></i>
-							<i class="fa fa-star-o"></i> <span>- ADD Rivew</span>
+							<i class="fa fa-star-o"></i> <span>- ADD Review</span>
 						</li>
 					</ul>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing Donec Nulla lectus nunc, efficitur dui vitae, viverra finibus massa Vestibulum molestie accumsan.</p>
@@ -831,7 +831,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 					</ul>
 				</div>
 				<div class="col-md-6 col-sm-6 copy-rights">
-					<p> WebStrot&copy; 2015 Luxury Shop - HTML Template. </p>
+					<p> Luxury Shop - MinhTD </p>
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<a title="Payment-getway" href="#"><img src="../../static/assets/img/footer/payment-getway-icon.png" alt="payment-getway-icon"></a>
@@ -845,7 +845,7 @@ Purchase: http://themeforest.net/user/webstrot  -->
 	
 		<!-- jQuery Include -->
 	<script src="../../static/assets/libraries/jquery.min.js"></script>
-	<script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false'></script>
+	<script type="text/javascript" src='https://maps.google.com/maps/api/js?sensor=false'></script>
 	<script src="../../static/assets/libraries/gmap/jquery.gmap.min.js"></script> <!-- Light Box -->
 	<script src="../../static/assets/libraries/jquery.easing.min.js"></script><!-- Easing Animation Effect -->
 	<script src="../../static/assets/libraries/bootstrap/bootstrap.min.js"></script> <!-- Core Bootstrap v3.3.4 -->
