--- a/store/templates/store/07_login_register.html
+++ b/store/templates/store/07_login_register.html
@@ -539,7 +539,7 @@ Purchase: https://themeforest.net/user/webstrot  -->
 					</ul>
 				</div>
 				<div class="col-md-6 col-sm-6 copy-rights">
-					<p> WebStrot&copy; 2015 Luxury Shop - HTML Template. </p>
+					<p> Luxury Shop - MinhTD </p>
 				</div>
 				<div class="col-md-3 col-sm-3">
 					<a title="Payment-getway" href="#"><img src="{% static 'assets/../../static/assets/img/footer/payment-getway-icon.png' %}" alt="payment-getway-icon"></a>
